[WinCairo] Crash on exit when terminating egl https://bugs.webkit.org/show_bug.cgi?id=145832

Reviewed by Carlos Garcia Campos.

Avoid terminating egl on exit for WinCairo.

* platform/graphics/PlatformDisplay.cpp:
(WebCore::PlatformDisplay::~PlatformDisplay):


Canonical link: https://commits.webkit.org/163883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185411 268f45cc-cd09-0410-ab3c-d52691b4dbfc